SS:Changes made in feature file commented the swift code.

--- a/PromantusBddDemo/bin/lib/.gitignore
+++ b/PromantusBddDemo/bin/lib/.gitignore
@@ -3,3 +3,4 @@
 /TempTempCase1550217587431.class
 /TempTestSuite1550217599517.class
 /TempTestSuite1550217725192.class
+/TempTestSuite1550237059496.class
