SS:Changes made in feature file commented the swift code.

--- a/PromantusBddDemo/bin/lib/.gitignore
+++ b/PromantusBddDemo/bin/lib/.gitignore
@@ -4,3 +4,6 @@
 /TempTestSuite1550217599517.class
 /TempTestSuite1550217725192.class
 /TempTestSuite1550237059496.class
+/TempTestSuite1550238047366.class
+/TempTempCase1550238167567.class
+/TempTestSuite1550238284988.class
